redesign with a sample template

--- a/index.html
+++ b/index.html
@@ -4,21 +4,36 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+
+        <link rel="stylesheet" href="style.css">
+
+        <title>Rose Design NYC</title>
     </head>
     <body>
-        <nav class="nav">
-            <div class="container">
-                <h1 class="logo">
-                    <a href="index.html">Rose Design NYC</a>
-                </h1>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
+        <!-- Header -->
+        <header id="header">
+            <a href="#" class="logo">Logo</a>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#team">Team</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </header>
+
+        <!-- Banner -->
+        <section class="banner" id="home">
+            <h2>We Make <span>Brands</span> Matter</h2>
+        </section>
+        <!-- About -->
+        <!-- Services -->
+        <!-- Stats -->
+        <!-- Portfolio -->
+        <!-- Team -->
+        <!-- Contact -->
+        
+
     </body>
 </html>
