Added Contact section

--- a/index.html
+++ b/index.html
@@ -192,7 +192,47 @@
         </section>
 
         <!-- Contact -->
-        
+        <section class="sec contact" id="contact">
+            <div class="content">
+                <div class="mxw880p">
+                    <h3>Send Us A Message</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, consequatur. </p>
+                </div>
+
+                <div class="contactForm">
+                    <form>
+                        <div class="row100">
+                            <div class="inputBx50">
+                                <input type="text" name="" placeholder="Full Name">
+                            </div>
+                            <div class="inputBx50">
+                                <input type="text" name="" placeholder="Email Address">
+                            </div>
+                        </div>
+                        <div class="row100">
+                            <div class="inputBx100">
+                               <textarea placeholder="Message"></textarea>
+                            </div>
+                        </div>
+                        <div class="row100">
+                            <div class="inputBx100">
+                                <input type="submit" name="" value="Send">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="sci">
+                    <ul>
+                        <li><a href="#"><img src="images/facebook.png"></a></li>
+                        <li><a href="#"><img src="images/twitter.png"></a></li>
+                        <li><a href="#"><img src="images/linkedin.png"></a></li>
+                    </ul>
+                </div>
+                <p class="copyright">Design & Developed By <a href="#">Online Tutorial</a></p>
+            </div>
+            
+        </section>
+
         <script type="text/javascript">
             window.addEventListener("scroll", function() {
                 var header = document.querySelector("header");
