--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
         <header id="header">
             <a href="#" class="logo">Logo</a>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home" onclick="toggle()">Home</a></li>
+                <li><a href="#about" onclick="toggle()">About</a></li>
+                <li><a href="#services" onclick="toggle()">Services</a></li>
+                <li><a href="#portfolio" onclick="toggle()">Portfolio</a></li>
+                <li><a href="#team" onclick="toggle()">Team</a></li>
+                <li><a href="#contact" onclick="toggle()">Contact</a></li>
             </ul>
+            <div class="toggle" onclick="toggle()"></div>
         </header>
 
         <!-- Banner -->
@@ -238,6 +239,11 @@
                 var header = document.querySelector("header");
                 header.classList.toggle("sticky", window.scrollY > 0)
             })
+
+            function toggle() {
+                var header = document.querySelector("header");
+                header.classList.toggle("active");
+            }
         </script>
     </body>
 </html>
