--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <!-- Header -->
         <header id="header">
-            <a href="#" class="logo">Logo</a>
+            <a href="#" class="logo">Rose Design NYC</a>
             <ul>
                 <li><a href="#home" onclick="toggle()">Home</a></li>
                 <li><a href="#about" onclick="toggle()">About</a></li>
@@ -229,7 +229,7 @@
                         <li><a href="#"><img src="images/linkedin.png"></a></li>
                     </ul>
                 </div>
-                <p class="copyright">Design & Developed By <a href="#">Online Tutorial</a></p>
+                <p class="copyright">Design & Developed By <a href="#">Daniel Ho</a></p>
             </div>
             
         </section>
