Change background color

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!-- Banner -->
         <section class="banner" id="home">
-            <h2>We Make <br><span>Brands</span> Matter</h2>
+            <h2>Turning your <span>ideas</span> into <br><span>Products</span></h2>
         </section>
 
         <!-- About -->
