--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
         <link rel="stylesheet" href="style.css">
 
-        <title>Rose Design NYC</title>
+        <title>Rose Designs NYC</title>
     </head>
     <body>
         <!-- Header -->
         <header id="header">
-            <a href="#" class="logo">Rose Design NYC</a>
+            <a href="#" class="logo">Rose Designs NYC</a>
             <ul>
                 <li><a href="#home" onclick="toggle()">Home</a></li>
                 <li><a href="#about" onclick="toggle()">About</a></li>
@@ -224,9 +224,8 @@
                 </div>
                 <div class="sci">
                     <ul>
-                        <li><a href="#"><img src="images/facebook.png"></a></li>
-                        <li><a href="#"><img src="images/twitter.png"></a></li>
-                        <li><a href="#"><img src="images/linkedin.png"></a></li>
+                        <li><a href="https://www.instagram.com/rosedesignsnyc/"><img src="images/instagram.png"></a></li>
+                        <li><a href="https://www.tiktok.com/@rosedesignsnyc?/"><img src="images/tik-tok.png"></a></li>
                     </ul>
                 </div>
                 <p class="copyright">Design & Developed By <a href="#">Daniel Ho</a></p>
