Changed social media icons and put javascript in script.js

--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
                     <div class="brand">
                         <a href="#"><h2>Brand Name</h2></a>
                     </div>
+                    <div class="brand">
+                        <a href="#"><h2>Brand Name</h2></a>
+                    </div>
+                    <div class="brand">
+                        <a href="#"><h2>Brand Name</h2></a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -201,7 +207,7 @@
                 </div>
 
                 <div class="contactForm">
-                    <form action="https://formsubmit.co/219970191@madisonhs.org" method="POST">
+                    <form action="https://formsubmit.co/98c1a184095856cc1533284e3b511007" method="POST">
                         <!-- Have a alternative URL for Thank You page -->
                         <!-- <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html"> -->
 
@@ -242,16 +248,6 @@
             
         </section>
 
-        <script type="text/javascript">
-            window.addEventListener("scroll", function() {
-                var header = document.querySelector("header");
-                header.classList.toggle("sticky", window.scrollY > 0)
-            })
-
-            function toggle() {
-                var header = document.querySelector("header");
-                header.classList.toggle("active");
-            }
-        </script>
+        <script src='script.js'></script>
     </body>
 </html>
