Custom File Button

--- a/index.html
+++ b/index.html
@@ -231,13 +231,12 @@
                             </div>
                         </div>
 
-                        <div class="row100">
-                            <div class="inputBx50">
-                                <input type="file" name="Attachment" accept="image/png, image/jpeg">
-                                <!-- <button type="button">Upload Image</button> -->
-                            </div>     
+                        <div>
+                             <input type="file" name="Attachment" id="Attachment" accept="image/png, image/jpeg" hidden="hidden">
+                            <button type="button" id="file-button">Choose a File</button>
+                            <span id="file-text">No File Chosen</span>
                         </div>
-
+                       
                         <div class="row100">
                             <div class="inputBx100">
                                 <input type="submit" name="" value="Send">
